
----------
mgambhir    Date: Fri Jun 21 13:03:50 EDT 2013  CSN: CSN-awb-542
                  Fri Jun 21 17:03:50 UTC 2013


Directory tools/scripts/doxygen
 bsv.filter                Locally Modified          541 

- minor update to the bsv.filter to remove parameter numeric type from Interface declaration

----------
mgambhir    Date: Wed Jun 26 15:22:39 EDT 2013  CSN: CSN-awb-543
                  Wed Jun 26 19:22:39 UTC 2013


Directory libperl/Asim/lib/Asim
 Package.pm                Locally Modified          542 

- removed the restriction for git repos to have a mytags file inside admin dir

----------
mgambhir    Date: Thu Aug  8 18:04:12 EDT 2013  CSN: CSN-awb-544
                  Thu Aug  8 22:04:12 UTC 2013


Directory .
 configure                 Locally Modified          543 
 configure.in              Locally Modified          543 

-$htmldir is now set to $docdir/html

----------
emer        Date: Thu Sep 19 13:55:44 EDT 2013  CSN: CSN-awb-545
                  Thu Sep 19 17:55:44 UTC 2013


Directory libperl
 PlotShell/                Locally Modified          544 
 Asim/                     Locally Modified          544 
 Benchmarks/               Locally Modified          544 
 AsimShell/                Locally Modified          544 
 PinPoints/                Locally Modified          544 

Directory tools/awb/awb
 awb_util.pm               Locally Modified          544 
 awb_dialog.pm             Locally Modified          544 
 awb_dialog.ui             Locally Modified          544 

Added actions to awb menus to open a shell or a file browser
at either the model's build directory or the benchmarks's run
directory.

Added some svn ignores for MYMETA.yml files.

----------
emer        Date: Thu Sep 19 14:40:13 EDT 2013  CSN: CSN-awb-546
                  Thu Sep 19 18:40:13 UTC 2013


Directory tools/scripts
 asimstarter.in            Locally Modified          545 

Updated asimstarter to reflect name change of awb2 back to
plain awb.